# sandbox

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DockerFile  README.md  SoTFSaveInfo.py  bake.py  convert-into-hex.hpp  dlist.hpp  elements.cpp  elements.h  example.input  main.cpp  makefile  pack.hpp
BinaryNumber/: BinaryNumber.py  BinaryNumberTest.py
GStest3/GStest2/: GStest2.sln  Vattenrening.cs
GStest3/GStest2/GStest2/: Form1.Designer.cs  Form1.cs  Form1.resx  GStest2.csproj  Program.cs  Project UHT.Designer.cs  Project UHT.cs  Project UHT.resx  Vattenrening.cs
GStest3/GStest2/GStest2/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
dsf2wave/: dsf2wave.py
lempel-ziv-welch/: lempel-ziv-welch-example.py  lempel-ziv-welch.py
libraries/: CMakeLists.txt
libraries/delta/: CMakeLists.txt  delta.cpp  delta.h
placement-new/: main.cpp  makefile
pure-virtual-interface/: main.cpp  makefile
pyasm/: pyasm.py
pyasm/arch/: __init__.py  adsp218x.py  adsp219x.py
templates-definition-separation/: main.cpp  makefile  template-spec-get-area.hpp  template-spec-get-perimeter.hpp  template-spec-set-height.hpp  template-spec-set-width.hpp  template-spec.hpp
templates-polymorphism/: main.cpp  makefile
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  main.cpp
